--- a/Source/game_sHoNe/demoApp1/demoApp1.vcxproj.filters
+++ b/Source/game_sHoNe/demoApp1/demoApp1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InitD3D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameTimer.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="D3dApp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InitD3D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
