--- a/Source/game_sHoNe/gameMain/gameMain.vcxproj
+++ b/Source/game_sHoNe/gameMain/gameMain.vcxproj
@@ -42,7 +42,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -73,6 +73,7 @@
     <TargetName>$(ProjectName)$(PlatformName)$(Configuration)</TargetName>
     <IntDir>$(SoulutionDir)..\..\..\Temp\$(ProjectName)$(PlatformName)$(Configuration)\</IntDir>
     <OutDir>$(SoulutionDir)..\..\..\Test\$(PlatformName)$(Configuration)\</OutDir>
+    <IncludePath>$(SolutionDir)..\..\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <TargetName>$(ProjectName)$(PlatformName)$(Configuration)</TargetName>
@@ -130,7 +131,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BoxDrawItem.cpp" />
+    <ClCompile Include="D3D12Renderer.cpp" />
+    <ClCompile Include="DrawItem.cpp" />
+    <ClCompile Include="GameTimer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Utility.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BoxDrawItem.h" />
+    <ClInclude Include="D3D12Renderer.h" />
+    <ClInclude Include="DrawItem.h" />
+    <ClInclude Include="GameTimer.h" />
+    <ClInclude Include="IRenderer.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
