--- a/Source/game_sHoNe/demoApp1/demoApp1.vcxproj.filters
+++ b/Source/game_sHoNe/demoApp1/demoApp1.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="MathHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\gameMain\d3dx12.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameTimer.cpp">
