--- a/Source/game_sHoNe/gameMain/gameMain.vcxproj
+++ b/Source/game_sHoNe/gameMain/gameMain.vcxproj
@@ -22,14 +22,14 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{D5D3D7E2-7ABB-426C-A077-E7D6DD4181F1}</ProjectGuid>
     <RootNamespace>gameMain</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -41,7 +41,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -132,21 +132,31 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BoxDrawItem.cpp" />
+    <ClCompile Include="CameraNode.cpp" />
     <ClCompile Include="D3D12Renderer.cpp" />
+    <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="DrawItem.cpp" />
     <ClCompile Include="GameTimer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PlaneDrawItem.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="UserControllerListener.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoxDrawItem.h" />
+    <ClInclude Include="CameraNode.h" />
     <ClInclude Include="D3D12Renderer.h" />
+    <ClInclude Include="d3dx12.h" />
+    <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="DrawItem.h" />
     <ClInclude Include="GameTimer.h" />
     <ClInclude Include="IRenderer.h" />
+    <ClInclude Include="PlaneDrawItem.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="UserControllerListener.h" />
     <ClInclude Include="Utility.h" />
+    <ClInclude Include="WindowConstants.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
