--- a/Source/game_sHoNe/gameMain/gameMain.vcxproj.filters
+++ b/Source/game_sHoNe/gameMain/gameMain.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="TexturedBox.cpp">
       <Filter>Source Files\DrawItems</Filter>
     </ClCompile>
+    <ClCompile Include="TexturedPlane.cpp">
+      <Filter>Source Files\DrawItems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IRenderer.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TexturedBox.h">
+      <Filter>Header Files\GameView\DrawItems</Filter>
+    </ClInclude>
+    <ClInclude Include="TexturedPlane.h">
       <Filter>Header Files\GameView\DrawItems</Filter>
     </ClInclude>
   </ItemGroup>
