--- a/Source/game_sHoNe/gameMain/gameMain.vcxproj
+++ b/Source/game_sHoNe/gameMain/gameMain.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="PlaneDrawItem.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="TexturedBox.cpp" />
+    <ClCompile Include="TexturedPlane.cpp" />
     <ClCompile Include="UserControllerListener.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
@@ -156,6 +157,7 @@
     <ClInclude Include="PlaneDrawItem.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="TexturedBox.h" />
+    <ClInclude Include="TexturedPlane.h" />
     <ClInclude Include="UserControllerListener.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="WindowConstants.h" />
