--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@
 *.bmp
 *.ilk
 *.ilk
+Source/game_sHoNe/.vs/game_sHoNe/v15/.suo
+Source/game_sHoNe/.vs/game_sHoNe/v15/.suo
+*.db-shm
+Source/game_sHoNe/.vs/game_sHoNe/v15/.suo
+*.obj
+*.obj
+*.obj
+*.tlog
+*.exe
+*.ilk
+*.pdb
