--- a/Source/game_sHoNe/gameMain/gameMain.vcxproj
+++ b/Source/game_sHoNe/gameMain/gameMain.vcxproj
@@ -73,7 +73,8 @@
     <TargetName>$(ProjectName)$(PlatformName)$(Configuration)</TargetName>
     <IntDir>$(SoulutionDir)..\..\..\Temp\$(ProjectName)$(PlatformName)$(Configuration)\</IntDir>
     <OutDir>$(SoulutionDir)..\..\..\Test\$(PlatformName)$(Configuration)\</OutDir>
-    <IncludePath>$(SolutionDir)..\..\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\..\Include;$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(DXSDK_DIR)Lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <TargetName>$(ProjectName)$(PlatformName)$(Configuration)</TargetName>
@@ -102,6 +103,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>_ENABLE_EXTENDED_ALIGNED_STORAGE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <PostBuildEvent>
       <Command>xcopy /y "$(SolutionDir)gameMain\Shaders" "$(OutDir)Shaders"
@@ -142,7 +144,9 @@
     <ClCompile Include="DrawItem.cpp" />
     <ClCompile Include="GameTimer.cpp" />
     <ClCompile Include="Lights.cpp" />
+    <ClCompile Include="LoadedDrawItem.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MoveOnInputDrawItemComponent.cpp" />
     <ClCompile Include="PlaneDrawItem.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="TexturedBox.cpp" />
@@ -158,8 +162,11 @@
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="DrawItem.h" />
     <ClInclude Include="GameTimer.h" />
+    <ClInclude Include="IDrawItemComponent.h" />
     <ClInclude Include="IRenderer.h" />
     <ClInclude Include="Lights.h" />
+    <ClInclude Include="LoadedDrawItem.h" />
+    <ClInclude Include="MoveOnInputDrawItemComponent.h" />
     <ClInclude Include="PlaneDrawItem.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="TexturedBox.h" />
@@ -167,6 +174,9 @@
     <ClInclude Include="UserControllerListener.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="WindowConstants.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Scene.fbx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
