--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ Source/game_sHoNe/.vs/game_sHoNe/v15/.suo
 *.exe
 *.ilk
 *.pdb
+Source/game_sHoNe/.vs/game_sHoNe/v15/.suo
+Source/game_sHoNe/.vs/game_sHoNe/v15/.suo
+*.tlog
+*.log
+*.pdb
+Source/game_sHoNe/.vs/game_sHoNe/v15/.suo
+*.obj
